# ZI

./: Cargo.toml  start.bat
src/: algorithms.rs  hash.rs  main.rs
src/algorithms/: mod.rs
src/algorithms/enigma/: alg.rs  mod.rs  plugboard.rs  reflector.rs  rotor.rs  rotor_assembly.rs  tests.rs  utils.rs
src/algorithms/xxtea/: alg.rs  test.rs
src/gui/: mod.rs
src/gui/components/: mod.rs  navigation.rs
src/gui/pages/: fsw.rs  manual.rs  mod.rs  settings.rs  tcp.rs
src/gui/state/: fsw_state.rs  manual_state.rs  mod.rs  settings_state.rs  state.rs  tcp_state.rs
src/gui/state/args/: mod.rs
src/gui/state/messages/: mod.rs
src/gui/toasts/: mod.rs
src/hash/: hash.rs  mod.rs  s_boxes.rs  tiger.rs
src/utils/: mod.rs
