[package]
name = "zi"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "image", "svg"] }
notify = "7.0.0"
rfd = "0.15.1"
tokio = { version = "1.42.0",  features = ["full"] }
leb128 = "0.2.5"
tiger = "0.2.1"
magic-crypt = "4.0.1"
async-stream = "0.3.6"
